第二节精简

--- a/content/docs/1价值/2_寻找价值的历程.md
+++ b/content/docs/1价值/2_寻找价值的历程.md
@@ -31,11 +31,7 @@ toc: true
 
 商业中的洞见不仅来源于前人的总结，更有效的是一手调研，通过对原始数据的挖掘积累，发现一手的市场规律。现在看来，可能正是这次得了大奖的市场调研，才为我们此后从事价值投资依旧重视一手调研的方法论奠定了基础。
 
-```
-读书、思考、实践，对这个世界的好奇和探索，使我在很小的时候就明白，追求事业和梦想，必须对自己有所承诺，着眼于长远，全神贯注并全力以赴。在不同的际遇中，学习所有能学习到的最高标准，从而获得理解与洞察的能力，这是我一直以来坚持的长期主义。
-```
-
-
+{{< alert icon="💡" text="“读书、思考、实践”——对这个世界的好奇和探索，使我在很小的时候就明白，追求事业和梦想，必须对自己有所承诺，着眼于长远，全神贯注并全力以赴。在不同的际遇中，学习所有能学习到的最高标准，从而获得理解与洞察的能力，这是我一直以来坚持的长期主义。"/>}}
 
 ## 我对投资的思考
 
