--- a/content/docs/2投资哲学/4_价值投资方法与哲学.md
+++ b/content/docs/2投资哲学/4_价值投资方法与哲学.md
@@ -13,12 +13,6 @@ weight: 140
 toc: true
 ---
 
-在我的书架上，有一套书最为醒目，我总会在不经意间打开翻看，那就是由本杰明·格雷厄姆（Benjamin Graham）与戴维·多德（David Dodd）在1934年共同写下的《证券分析》（*Security Analysis*）。这部巨著被誉为“投资者的圣经”，书中的投资思想也被称为“价值投资的路线图”。这部历久弥新的经典著作最大的意义在于，它使得价值投资和基本面分析真正走入人们的视野。自此，无数投资者都在相信或质疑、亲近或远离中解构价值投资。
-
-20世纪80年代初，证券分析师们的办公桌上往往都整齐摆放着数支铅笔和一摞白纸，还有两部电话机以及一些便捷查询表，他们每天都会通过报纸、电话、广播等工具检索信息，拿起铅笔飞速计算着各项资产收益率。今天，计算机、互联网和各种数据库正逐渐替代人工运算模式。投资工具在变，投资方法也在变，价值投资的基本理念历经数个周期，然而，真正践行价值投资的投资者并不多见。
-
-价值投资需要既能从质的方面，又能从量的方面找到根据，但相反的是，许多人在遇到无法理解和无从应对的事情时，寄希望于瞬间的直觉或者玄妙的悟性。这就好比在最后的时刻又把胜负手交给了运气，或者是执迷于零和游戏，在市场的复杂多变中你争我夺。
-
 作为价值投资的信仰者，需要认真区分“投资”与“投机”，并思考：投资究竟是购买一张证券等待合适的时机出售，还是成为这家企业的股东与其同呼吸、共命运？在我们看来，品质是投资选择的基石，而品质通过一个问题即可辨明：时间是不是你的朋友？真正高品质的公司，无论在怎样起伏难料的经济周期当中，其地位都固若金汤，可以实现持续性的增长和繁荣。
 
 投资一般可从行业、公司、管理层这三个层面来分析。看行业就要关注商业模式，这个生意的本质是什么、赚钱逻辑是什么；关注竞争格局，是寡头垄断还是充分竞争；关注成长空间，警惕那种已经寅吃卯粮的夕阳行业；关注进入门槛，是不是谁都可以模仿；等等。看公司就要关注业务模式、运营模式和流程机制，管理半径有多大，规模效应如何，有没有核心竞争力。看管理层就要关注创始人有没有格局，执行力如何，有没有创建高效组织的思维和能力，有没有企业家精神。但仅看这些似乎还不够，因为投资人无法亲历企业成长的方方面面，更无法判断市场的不可知因素。因此，做价值投资还要看到行业的发展、公司的演进和管理层的潜力，包括这个生意如何诞生、如何变化、如何消亡，以及这些结果背后的驱动因素，看成因和结果。因此，我们提出从人、生意、环境和组织的角度，从更多维的空间，思考创业者、商业模式和生意所处的生态环境以及企业的组织基因。在研究过程中，不仅要思考管理层的创造性、企业的商业模式演进，还要思考组织基因的表达、系统生态环境的变化等，用第一性原理思考问题，**在无常中寻找有常，在有常中等待无常，探究五步之外，投资于变化，投资于品质。**
@@ -31,14 +25,6 @@ toc: true
 
 要了解一个市场，首先要了解它的“前世今生”，所以我们从发展历史悠久的美国零售业入手。零售业本身是一个现代产业，它是伴随着商品经济的发展而诞生的。从历史的角度看，现代零售的“前世”纷繁复杂，从200多年前出现的纯粹的夫妻老婆店开始，零售业进入现代经济体系后不断演化，但直到现在，夫妻老婆店仍是不可或缺的商业形态。其实，夫妻老婆店有它的独特优势，比如它不存在公司治理的问题，资本的所有者和运营者是高度统一的，而且夫妻老婆店更有温度，老板、老板娘很熟悉周边的社区，可以很友善地与客户建立个人联系，进而形成情感绑定。但其劣势更加明显，比如规模比较小、产品选择窄、供应商体系混乱、消费者体验不一致等。
 
-零售业第一次出现大发展的标志是连锁店的诞生。需要看到的是，连锁店的诞生是有前提的，这个前提就是生态体系的创建。而其生态体系包括什么呢？首先是铁路的出现。美国第一条横贯东西的铁路于1869年完工，这为现代物流体系创造了新的标准，物流的标准化、即时化进程快速发展，使一家好的工厂可以生产供全国使用的产品。从美国的发展历程可以看到，1919年到1926年，美国出现了现代零售业的大规模市场整合。“新零售”这个词当时就已经在美国出现了，那时美国甚至已经出现了无人便利店。
-
-连锁店出现后，有些商家就开发出了超市业态。商品品类和数目的扩张，使消费者一站式购物成为可能。这其中又蕴含着巨大的变化，如果说铁路使零售生态体系得到现代化发展，那么连锁店以及超市这种吸纳大量消费者的业态就在整个零售生态体系中占据了关键位置，我们称之为“生态位置”。
-
-当连锁产生的时候，如果没有好的商品，连锁本身就不成立。这个时候，美国市场出现了两家非常重要的消费品公司——宝洁和联合利华。这两家公司至今仍然是广受信赖的消费品公司，它们的核心输出是品牌，它们通过将产品品牌化、包装化，使消费者对其产品有了统一的认知，即“快消品”（Fast Moving Consumer Goods）。其实，1839年就已经出现了包装好的商品——肥皂。肥皂是生活必需品，特征是可包装、易存储且不需要电冰箱来储存，最早的商品只能是拥有这些特征的商品。但是直到1930年以后，商品品牌才真正得到发展，其中的原因主要是电视机的出现。电视机和有线电视网的发展让知名消费品公司有机会迅速大规模宣传品牌，最早的电视节目也都是围绕品牌来做的，“肥皂剧”最早就因给肥皂打广告而得名。在品类拓展中，还有一个重要突破：电冰箱的出现。这促使包装商品品类终于可以从肥皂这一类商品扩张到食品品类。食品的规模比其他商品的规模大好多倍，进而使现代商品的规模也扩大了好多倍。
-
-
-
 ![价值投资方法与哲学](%E4%BB%B7%E5%80%BC%E6%8A%95%E8%B5%84%E6%96%B9%E6%B3%95%E4%B8%8E%E5%93%B2%E5%AD%A6.jpeg)
 
 生态体系的搭建是一个不断完善的过程，在供给端的关键要素不断出现后，有一个需求端的要素出现了，那就是家用汽车。家用汽车的普及，一下子扩大了人们的购买半径，使得商店的地理位置不再是核心问题。伴随着美国家庭汽车拥有量的增加，美国零售业出现了重大变革，超市的数量和销售规模也得到非常大的增长。
@@ -47,59 +33,49 @@ toc: true
 
 我们非常关注零售业中那些创新的代表，它们可以说是这个生态体系中的独特“物种”。在家用汽车出现之前，美国拥有两家家喻户晓的公司：超市型零售公司凯马特（Kmart）和高档百货公司梅西百货（Macy’s），这两家公司最大的特点就是占据了众多城市的核心地理位置。但家用汽车出现后，零售业不需要依附于原来的物流体系了，沃尔玛（Walmart）逐渐成为主流。
 
-沃尔玛诞生于阿肯色州的一座小城市，它的创始人是山姆·沃尔顿（Sam Walton）。由于当时最好的商业地理位置都是别人的，山姆·沃尔顿像学过“农村包围城市”的思想一样，坚持深耕农村，经营“革命根据地”，先在一个个“老少边穷”地区开店经营，之后才去开拓新的区域，而非一开始就在全美开店。这可以说是“持久战”，通过长期的经营，做长期的事业。从数据来看，1980年沃尔玛只有276家店，而1981年凯马特已有2000家店；2020年，沃尔玛在全球范围已拥有接近1万家店，而凯马特只有600多家店，中间还破产过2次。这里需要思考，为什么占据核心地理位置的凯马特会败下阵来？寻找答案的关键还是看谁能为消费者创造更多价值。沃尔玛是美国最早运用高科技，将计算机、数据引用到零售业的公司之一，早在1987年沃尔玛就做了全美最大的私人卫星通信系统（即商务情报系统，简称BI）。[(14)](javascript:void(0))这个商务情报系统能够使沃尔玛每家店的理论成本比周边竞争对手的都要低。店长没有涨价权，只有降价权。提供同质且价低的商品，就是以消费者为中心。而且，沃尔玛和凯马特还有一个重大不同：凯马特会搞活动式促销，消费者在促销时大量购物，在非促销时延迟购物，这导致供应链扭曲，库存奇高，供应商苦不堪言；而沃尔玛坚持每日低价（Everyday Low Price，简称EDLP），消费者不需要精打细算等促销，这是最简单也是最符合人性的。
+沃尔玛诞生于阿肯色州的一座小城市，它的创始人是山姆·沃尔顿（Sam Walton）。由于当时最好的商业地理位置都是别人的，山姆·沃尔顿像学过“农村包围城市”的思想一样，坚持深耕农村，经营“革命根据地”，先在一个个“老少边穷”地区开店经营，之后才去开拓新的区域，而非一开始就在全美开店。这可以说是“持久战”，通过长期的经营，做长期的事业。从数据来看，1980年沃尔玛只有276家店，而1981年凯马特已有2000家店；2020年，沃尔玛在全球范围已拥有接近1万家店，而凯马特只有600多家店，中间还破产过2次。这里需要思考，为什么占据核心地理位置的凯马特会败下阵来？寻找答案的关键还是看谁能为消费者创造更多价值。沃尔玛是美国最早运用高科技，将计算机、数据引用到零售业的公司之一，早在1987年沃尔玛就做了全美最大的私人卫星通信系统（即商务情报系统，简称BI）。这个商务情报系统能够使沃尔玛每家店的理论成本比周边竞争对手的都要低。店长没有涨价权，只有降价权。提供同质且价低的商品，就是以消费者为中心。而且，沃尔玛和凯马特还有一个重大不同：凯马特会搞活动式促销，消费者在促销时大量购物，在非促销时延迟购物，这导致供应链扭曲，库存奇高，供应商苦不堪言；而沃尔玛坚持每日低价（Everyday Low Price，简称EDLP），<u>消费者不需要精打细算等促销，这是最简单也是最符合人性的。</u>
 
-之后，零售业又出现了新的创新。一是仓储式购物公司好市多（Costco）横空出世。我在20年前就已经开始研究好市多了，它的董事长告诉我说，沃尔玛有14万个库存保有单位[(15)](javascript:void(0))，有几乎最全的商品、最多的选择、最低的价格、最高的人流量，那该如何与沃尔玛竞争呢？第一，好市多的目标是让自己最想要的客户进来，让这些人产生最多的消费。于是，它将会员费设定为65美元，把真正来买东西的人吸纳进来。这在当时很创新，很多人甚至都认为这是骗子公司。第二，简化供应链，只做3000个库存保有单位，精选品类。这样一来，单品的采购规模大幅增加，比沃尔玛的还要大，这就使其商品单价比沃尔玛的还便宜。第三，好市多以极低的价格将商品买进来，然后按成本价卖给消费者，不再考虑定价的问题，公司营收主要来源于会员费。但有意思的是，对于有些成本价很低的商品，消费者不相信价格会那么便宜，或者说不相信那么便宜的商品是好的商品，于是好市多又把价格定得高于成本但略低于竞争对手的价格。这样，它的营收就不仅仅来源于会员费，还包括零售价差。
+之后，零售业又出现了新的创新。一是仓储式购物公司好市多（Costco）横空出世。我在20年前就已经开始研究好市多了，它的董事长告诉我说，沃尔玛有14万个库存保有单位，有几乎最全的商品、最多的选择、最低的价格、最高的人流量，那该如何与沃尔玛竞争呢？第一，好市多的目标是让自己最想要的客户进来，让这些人产生最多的消费。于是，它将会员费设定为65美元，把真正来买东西的人吸纳进来。这在当时很创新，很多人甚至都认为这是骗子公司。第二，简化供应链，只做3000个库存保有单位，精选品类。这样一来，单品的采购规模大幅增加，比沃尔玛的还要大，这就使其商品单价比沃尔玛的还便宜。第三，**好市多以极低的价格将商品买进来，然后按成本价卖给消费者，不再考虑定价的问题，公司营收主要来源于会员费。** 但有意思的是，对于有些成本价很低的商品，消费者不相信价格会那么便宜，或者说不相信那么便宜的商品是好的商品，于是好市多又把价格定得高于成本但略低于竞争对手的价格。这样，它的营收就不仅仅来源于会员费，还包括零售价差。
 
-还有一个创新物种是德国的奥乐齐（ALDI）公司。为了拜访它的创始人，我们先后去了德国四次，其中一次蹲守了两个星期，最终获得了和创始人面谈取经的机会。奥乐齐最大的特点就是几乎所有的商品都没有品牌，他们认为品牌会产生广告费，这些都会转嫁到消费者身上。它的90%以上的商品都是自有商品，库存保有单位更少，最初只有300多，发展到现在也就800多。更厉害的是，它的组织是完全去中心化的，所有的店长既是资本方，也是运营者。店长自己决定店里该卖什么，总部只是提供采购清单。这真正是“让听到炮声的人决定仗怎么打”，把现代化的供应链流程和原始的夫妻老婆店的精髓结合了起来。
+还有一个创新物种是德国的奥乐齐（ALDI）公司。奥乐齐最大的特点就是几乎所有的商品都没有品牌，他们认为品牌会产生广告费，这些都会转嫁到消费者身上。它的90%以上的商品都是自有商品，库存保有单位更少，最初只有300多，发展到现在也就800多。更厉害的是，它的组织是完全去中心化的，所有的店长既是资本方，也是运营者。店长自己决定店里该卖什么，总部只是提供采购清单。这真正是<u>“让听到炮声的人决定仗怎么打”，把现代化的供应链流程和原始的夫妻老婆店的精髓结合了起来</u>。
 
 我们还去美国研究过以自有食品品牌闻名的乔氏连锁超市（Trader Joe’s），去土耳其研究过连锁超市BIM，去波兰研究过当地的零售业态，力求从每一个商业物种及其所在环境中挖掘出某些圆融自洽的逻辑。当我们看完美国和欧洲国家的零售店以后，再看日本的零售业态，发现它形成了另外一种生态环境，这是和日本的社会发展相互匹配的。
 
-在1975年前后，日本有近80%的人都是中产阶级。整个社会大量生产、大量消费，需求同质化、消费同质化和生活同质化是当时日本社会的基本写照。当时日本的零售业态是百货、连锁超市和折扣店。到了20世纪80年代中后期，日本陷入经济低迷，日本企业开始反思并衍生出精细运营、柔性制造[(16)](javascript:void(0))的模式，日本的消费者也产生了分层，变得标签化，精神文化消费占比逐渐升高，零售业态主要是大型综合超市、精选品类店以及追求极致低价和性价比的百元店。到了20世纪90年代，日本经济缓慢复苏，但人口已经出现减少趋势，呈现老龄化和独身主义倾向，整个社会处于低欲望的状态。人们的消费特征演变为不过分关注品牌，而是注重产品品质、服务内容和情感寄托。在这样的社会环境下，便利化的连锁药店、便利店业态开始大量出现，店里不只有药品、化妆品、杂货和包装食品，还有大量生鲜、鲜食。从实际盈利重点来看，便利店在本质上是快餐店。我们围绕这些业态对方便性做了大量的分析，包括覆盖区域、单店流量、客单价、品类分布等，研究目的就是去探究方便性如何转化为更好的顾客服务。
+在1975年前后，日本有近80%的人都是中产阶级。整个社会大量生产、大量消费，需求同质化、消费同质化和生活同质化是当时日本社会的基本写照。当时日本的零售业态是百货、连锁超市和折扣店。到了20世纪80年代中后期，日本陷入经济低迷，日本企业开始反思并衍生出<u>精细运营、柔性制造</u>的模式，日本的消费者也产生了分层，变得标签化，精神文化消费占比逐渐升高，零售业态主要是大型综合超市、精选品类店以及追求极致低价和性价比的百元店。到了20世纪90年代，日本经济缓慢复苏，但人口已经出现减少趋势，呈现老龄化和独身主义倾向，整个社会处于低欲望的状态。人们的消费特征演变为不过分关注品牌，而是注重产品品质、服务内容和情感寄托。在这样的社会环境下，便利化的连锁药店、便利店业态开始大量出现，店里不只有药品、化妆品、杂货和包装食品，还有大量生鲜、鲜食。从实际盈利重点来看，便利店在本质上是快餐店。我们围绕这些业态对方便性做了大量的分析，包括覆盖区域、单店流量、客单价、品类分布等，研究目的就是去探究方便性如何转化为更好的顾客服务。
 
 ### 以终为始，是研究的不变法则
 
-零售是和人联系非常紧密的生意，它突出解决的是“安全感”“便利性”“幸福感”的问题。比如企业通过品牌宣传、品类扩张、降价打折，来满足消费者的刚性需求，使之具有安全感；再通过建立连锁店、拓展品类选择、提供鲜食以及外卖服务等，来为消费者提供便利性，使其需求能够迅速得到满足；到后来，零售企业开始向全产业链转型，核心是解决消费者的多样化需求，提升综合满意度。
-
-正是基于对零售业10多年不间断的研究储备，当一个新商业物种出现时，我们才能够快速理解它需要怎样的养分、怎样的生长环境。这让我们在面对京东、百丽国际等投资机会时，敢于出重拳、下重注。
+零售是和人联系非常紧密的生意，它突出解决的是<u>“安全感”“便利性”“幸福感”</u>的问题。比如 1. 企业通过品牌宣传、品类扩张、降价打折，来满足消费者的刚性需求，使之具有安全感；2. 再通过建立连锁店、拓展品类选择、提供鲜食以及外卖服务等，来为消费者提供便利性，使其需求能够迅速得到满足；3. 到后来，零售企业开始向全产业链转型，核心是解决消费者的多样化需求，提升综合满意度。
 
 尽管已经做了如此多的研究，但我们对零售业还需要做更长时间跨度的研究，因为社会形态、文化偏好、人口结构、消费者审美能力等商业环境的组成要素都在快速变化，过去20年的研究仍然无法涵盖人类社会的大发展周期，更无法用以预测未来会有怎样的商业模式创新、物种创新。在此基础上，我们仍然需要探究支撑这个商业模式的组织基因，即创业者是怎样把他的个性、才华和梦想注入这个组织的，以及这个组织会呈现怎样的生长姿态等问题。**以终为始，是研究的不变法则。**
 
 ## 研究驱动
 
-价值投资最重要的标志就是研究驱动。对于一家专注于研究行业、研究基本面的投资公司，核心能力就是对商业本质的敏锐洞察。在高瓴刚创办的时候，我们就要求每一位研究人员都应该尽力成为一些行业的专家，而且是独立的专家，把行业的来龙去脉看清楚。因为**最好的分析方法未必是使用估值理论、资产定价模型、投资组合策略，而是坚持第一性原理，即追本溯源，这个“源”包括基本的公理、处世的哲学、人类的本性、万物的规律。**
+**最好的分析方法未必是使用估值理论、资产定价模型、投资组合策略，而是坚持第一性原理，即追本溯源，这个“源”包括基本的公理、处世的哲学、人类的本性、万物的规律。**
 
 ### 深入研究＝研究深＋研究透
 
-我们所坚持的投资研究，始终强调基于对人、生意、环境和组织的深度理解，通过深入研究，在变化的环境和周期中，挖掘最好的商业模式，寻求与这个商业模式最契合的创业者，从而确定投资标的。实践证明，思考商业问题，要用充足的时间研究过去，更要用充足的时间思考当下和判断未来。坚持这一点的理由很简单：如果没有对一个行业研究深、研究透，那为什么要投资这个行业中的公司？
+
 
 ![img](研究驱动的三种形式.jpeg)
 
-研究深是指做的研究必须基础和根本。**第一，我们非常喜欢****和创业者打交道，而且是在他们经历剧烈变化的那段时间打交道，这样我们就有机会参与到伟大企业的成长过程中。**我们通过与创业者交流，对消费者访谈，谋求资深从业者的见识、判断等，积累一手行业数据，了解关于行业或生态的历史演绎、横截面数据或者价值链，对生意所处的环境形成独特的认知和超预期的判断，具备真正理解因果关系的能力。**第二，我们非常喜欢研究全球的商业进化史，通过在世界各地寻找先进的商业轨迹，对全球不同地区、不同产业生态的“物种演化”收集加工。**分析的角度可能是行业的上下游，可能是不同的产品形态和定位，可能是某种资源或能力的稀缺性，也可能是影响这个生意的其他环境和基础设施，甚至可能是创业团队的独特禀赋，核心目的是用全球的样本把产业演变的逻辑进行沙盘模拟，把历史性和前瞻性贯穿起来，形成一个跨地区、跨周期的分析结果。
+研究深是指做的研究必须基础和根本。**第一，我们非常喜欢和创业者打交道，而且是在他们经历剧烈变化的那段时间打交道，这样我们就有机会参与到伟大企业的成长过程中。** 具备真正理解因果关系的能力。**第二，我们非常喜欢研究全球的商业进化史，通过在世界各地寻找先进的商业轨迹，对全球不同地区、不同产业生态的“物种演化”收集加工。** 把历史性和前瞻性贯穿起来，形成一个跨地区、跨周期的分析结果。
 
 就像爱因斯坦在物理世界中，用简洁的公式描述世界的本质一样，我们希望能够遵从第一性原理，在商业世界中找到某种简单的公式，尽管商业世界难以像物理世界那样抽象或简化，但投资研究就是这样一种挖掘关键痕迹的过程。更重要的是，简化到公式绝非商业研究的终点，真正的终点应该是探究这个公式的产生背景，挖掘更重要的参数，发现更深层次的运行机制，寻找不同事情之间究竟是并列的加法关系，还是翻倍的乘法关系，或者是改变量级的指数关系。研究深的目的是聚焦，是盯住微观商业史的起承转合，用东方的归纳思维做简化，发现真正有价值的行业和商业模式，是看成败。
 
-研究透是指做的研究必须全面透彻，经得起时间的考验。在研究过程中，很重要的一个方法是逆向思维，即反过来想。很重要的一点就是质疑“假设”，如果现有产业所处的生态变了，企业盈利的方式变了，企业组织的流程变了，这个企业会不会出现大的风险？如果现有资本市场的玩法变了，整体市场环境或传统的规则变了，这个模式还能不能走下去？如果没有了资本市场，无法退出，还投不投这个企业？如果整套逻辑的前提假设变了，哪些结论会不复存在？提出这些问题，归根到底是在提醒自己，研究必须把所有重要的前提和假设想清楚。如果能够把一个生意的成住坏空、荣辱兴衰都看清楚，投资人就能够从全局来把握情况，看清企业创造价值的全过程和伴随的风险点。就像查理·芒格所说：“要是知道我会死在哪里就好啦，我将永远不去那个地方。”谁能掌握更全面的信息，谁的研究更透彻，谁就能为风险定价。研究透的目的是检验所有的商业过程是否能够自洽，能否在事实上、实际操作中都成立，这是在用中国的老庄思维做全面演绎，是看生死。
+研究透是指做的研究必须全面透彻，经得起时间的考验。在研究过程中，很重要的一个方法是<u>逆向思维</u>，即反过来想。很重要的一点就是质疑“假设”，如果现有产业所处的生态变了，企业盈利的方式变了，企业组织的流程变了，这个企业会不会出现大的风险？如果现有资本市场的玩法变了，整体市场环境或传统的规则变了，这个模式还能不能走下去？如果没有了资本市场，无法退出，还投不投这个企业？如果整套逻辑的前提假设变了，哪些结论会不复存在？提出这些问题，归根到底是在提醒自己，研究必须把所有重要的前提和假设想清楚。如果能够把一个生意的成住坏空、荣辱兴衰都看清楚，投资人就能够从全局来把握情况，看清企业创造价值的全过程和伴随的风险点。就像查理·芒格所说：“要是知道我会死在哪里就好啦，我将永远不去那个地方。”谁能掌握更全面的信息，谁的研究更透彻，谁就能为风险定价。研究透的目的是检验所有的商业过程是否能够自洽，能否在事实上、实际操作中都成立，这是在用中国的老庄思维做全面演绎，是看生死。
 
-只有研究深、研究透，才能够更加轻松地形成决策。某种程度上说，研究深和研究透是一种平衡，前者强调因果逻辑的深度，后者强调穷尽各种维度的可能；前者关注收益，后者考察风险，兼具东西方两种思维模式，把西方推崇的形式逻辑和实证精神与东方推崇的归纳演绎和折中调和共同应用于商业分析。在任何时候，对商业世界的研究都是艰难的，它是一个不折不扣的生态系统，很难将其他参数或属性隔离，或者说系统本身就有很强的代偿性，但投资人依然可以选择一些方法，尽可能地控制关键变量，抽丝剥茧地去探究原理。**更多地研究是为了更少地决策，更久地研究是为了更准地决策**，只有在更少、更重要的变量分析上持续做到最好，才是提高投资确定性的最朴素的方法。这种“逻辑上的升维”和“决策上的降维”是很好的投资路径。因此，深入研究的起点就是形成投资决策的起点，只要“大胆假设、小心求证”，抓住“可理解、可预期、可展望”的有限关键变量，就能够果断做出投资决策。研究是做价值投资的基础能力。
+只有研究深、研究透，才能够更加轻松地形成决策。某种程度上说，<u>研究深和研究透是一种平衡，前者强调因果逻辑的深度，后者强调穷尽各种维度的可能；前者关注收益，后者考察风险，兼具东西方两种思维模式，把西方推崇的形式逻辑和实证精神与东方推崇的归纳演绎和折中调和共同应用于商业分析。</u>在任何时候，对商业世界的研究都是艰难的，它是一个不折不扣的生态系统，很难将其他参数或属性隔离，或者说系统本身就有很强的代偿性，但投资人依然可以选择一些方法，尽可能地控制关键变量，抽丝剥茧地去探究原理。**更多地研究是为了更少地决策，更久地研究是为了更准地决策**，只有在更少、更重要的变量分析上持续做到最好，才是提高投资确定性的最朴素的方法。这种“逻辑上的升维”和“决策上的降维”是很好的投资路径。因此，深入研究的起点就是形成投资决策的起点，只要“大胆假设、小心求证”，抓住“可理解、可预期、可展望”的有限关键变量，就能够果断做出投资决策。研究是做价值投资的基础能力。
 
-通过“寻找变化、质疑假设、执行推演、检验结果”这一过程，深入研究能够让投资人对产业链供给端和需求端形成精确的判断。举一个需求端的例子。《资本论》中有过这样一段表述：“物的名称对于物的本性来说完全是外在的。即使我知道一个人的名字叫雅各，我对他还是一点不了解。”[(17)](javascript:void(0))比如，在白酒这个传统行业，茅台和二锅头都是白酒，但这两者的相关生意的性质可能完全不同，驱动因素也差异很大。而啤酒、葡萄酒等酒类，虽然都是酒，但这两类产品的消费场景、消费频次完全不同。所以在研究以后，投资人才能知道消费者购买不同酒类或不同白酒的真实意图，即分别实现了怎样的深层次需求。
+通过“寻找变化、质疑假设、执行推演、检验结果”这一过程，深入研究能够让投资人对产业链供给端和需求端形成精确的判断。《资本论》中有过这样一段表述：“<u>物的名称对于物的本性来说完全是外在的。即使我知道一个人的名字叫雅各，我对他还是一点不了解。</u>” 比如，在白酒这个传统行业，茅台和二锅头都是白酒，但这两者的相关生意的性质可能完全不同，驱动因素也差异很大。而啤酒、葡萄酒等酒类，虽然都是酒，但这两类产品的消费场景、消费频次完全不同。所以在研究以后，投资人才能知道消费者购买不同酒类或不同白酒的真实意图，即分别实现了怎样的深层次需求。
 
 再举一个供给端的例子——宠物市场。研究发现，人口结构、家庭结构的改变会分别催生许多新的行业机会。而如果把这些变化放在一起考虑，诸如少子化、老龄化、家庭平均人数减少、单身人口比例增加以及上述因素导致的其他变化，这些都会不约而同地指向一个新的行业机会，即宠物市场。无论是人们的情感需求还是生活方式，都会带来宠物需求的快速增长。日本市场提供了很好的佐证，随着丁克家庭占比的扩大，宠物成为家庭成员的现象越来越普遍。由于国内宠物行业尚处于起步阶段，宠物食品、宠物医疗、宠物服务等领域都相对空白，在这样一个短暂时期中，供给结构可以决定消费结构。因此，在这种情况下，研究的结果就可以通过在产业端的投资来实现。我们曾投资了宠物医院、宠物食品等多家公司。有一家很小的宠物食品创业公司很有创新精神，它受中药产品的启发，把中药理念引入宠物食品，首创了治疗宠物狗腹泻的药，凭借与专卖店、诊所等渠道的良好关系，取得了不错的市场份额，逐渐成长为国内宠物食品行业最大的本土品牌公司之一，能够跟玛氏、雀巢等跨国公司展开竞争。
 
 ### 长期研究＝关键时点＋关键变化
 
-很大程度上来说，思考商业问题，要用大量的时间研究过去，更要用充足的时间思考当下和判断未来。尽管研究方法和研究周期见仁见智，有些研究者通过回顾短期内的现象总结规律，有些研究者通过推演不同情况的概率预测未来，但如果尽可能地把研究周期拉长，寻找历史时空中生意、生态的要素演变，就能看到未来5年、10年甚至20年的发展趋势，判断企业在未来的环境中会以怎样的表达方式，实现爆发式的增长。
+在投资决策面前，许多投资机会的时间窗口是稍纵即逝的，最重要的是对关键时点和关键变化的把握。只有<u>长期、动态地跟踪变化</u>，投资人才能够对变化产生超出一般意义的理解，从而拥有与市场不同的观点，而且是基于非常长期的视角的不同观点。
 
-在投资决策面前，许多投资机会的时间窗口是稍纵即逝的，最重要的是对关键时点和关键变化的把握。只有长期、动态地跟踪变化，投资人才能够对变化产生超出一般意义的理解，从而拥有与市场不同的观点，而且是基于非常长期的视角的不同观点。
-
-什么是关键时点？就是在大家都看不懂的时候，少数创业者能够在这个时点敏锐察觉产业的变化，为消费者和整个价值链输入新的模式和价值。什么是关键变化呢？就是环境的结构性变化，包括产业的生态位置调整、基础设施完善、需求的升级或转移等。许多人说，一个好的生意是建立在稀缺资源之上的，但其实变化和创新可以使原本稀缺的东西不再稀缺，并且这种打破稀缺的状态有且只有一个时间窗口，我称之为“机会窗口”，这是企业的快速成长期，甚至是爆发期。而在这个机会窗口之前，还有一个窗口叫“傻瓜窗口”，就是在一段时间里，投资人都觉得你的商业模式非常不靠谱、非常傻。在许多人看不起、看不懂、觉得不靠谱的这段时间里，企业将有机会积累用户、试错产品，并且创造出一定的商业壁垒，接下来就是拐点和陡变。
-
-不仅如此，坚持跨时间、跨地区、跨行业、跨类别、跨线上线下等多维度的行业研究，投资人可以同时关注到创新企业和传统企业，探索交叉领域的思维奇点，提前预知微妙的变化。这样的感知变化的能力，能够在很大程度上转化为深刻理解行业长期发展规律的本能，形成一种穿越迷雾看清本质的洞察力，从而把决策过程中的不解和不安转化为豁然开朗和内心宁静。
-
-通过长期研究做出的投资决策，不仅仅能为创业者提供更多资本，关键是给了创业者更多耐心，让他们可以不用在意一时成败。这个时候，企业短期是否盈利并不重要，创业者不需要过分关注盈利的实现时间和表现形式，不需要乱学乱做、盲目尝试，而是要回归到自己做这个生意的初心，思考这个生意是不是在解决消费者的核心诉求。
-
-高瓴投资蓝月亮，正是基于长期研究所带来的对趋势变化的把握。2008年以后，中国出现了消费升级这个大趋势，当时很多基础消费品品类都被跨国公司占领。其中，宝洁、联合利华占领了家用洗衣粉市场，但它们满足于洗衣粉市场的超大份额，一方面不再将开创性的新品研发作为公司的核心工作，研发投入占比持续降低，而是将研发的重点转移到了改进现有产品上面，不再作为游戏规则的改变者开发新品，因此忽略了消费升级的机会；另一方面对中国的中产阶级以及高端消费市场的规格产生了错判，没有去关注高端洗衣液品类。但我们长期研究的结果是，中国消费者迫切需要创新性的高端细分市场，于是我们鼓励以洗手液为主营产品的蓝月亮抓住这个机遇。在我们投资后的头两年，为完成转型，蓝月亮由一家赚钱的洗手液公司变成了策略性亏损的洗衣液公司，但到了2014年，蓝月亮的销售额开始大幅增长，在洗衣液行业的销售额比宝洁、联合利华销售额之和还要多。可以说，蓝月亮是新兴市场中本土品牌战胜跨国公司品牌的经典案例。值得一提的是，蓝月亮洗衣液的价格相对其他跨国公司品牌还能保持溢价，这也是非常罕见的。
+什么是关键时点？就是在大家都看不懂的时候，少数创业者能够在这个时点敏锐察觉产业的变化，为消费者和整个价值链输入新的模式和价值。什么是关键变化呢？就是环境的结构性变化，包括产业的生态位置调整、基础设施完善、需求的升级或转移等。许多人说，一个好的生意是<u>建立在稀缺资源之上的，但其实变化和创新可以使原本稀缺的东西不再稀缺，并且这种打破稀缺的状态有且只有一个时间窗口，我称之为“机会窗口”，这是企业的快速成长期，甚至是爆发期。</u>而在这个机会窗口之前，还有一个窗口叫“傻瓜窗口”，就是在一段时间里，投资人都觉得你的商业模式非常不靠谱、非常傻。在许多人看不起、看不懂、觉得不靠谱的这段时间里，企业将有机会积累用户、试错产品，并且创造出一定的商业壁垒，接下来就是拐点和陡变。
 
 - 很大程度上来说，思考商业问题，要用大量的时间研究过去，更要用充足的时间思考当下和判断未来。尽管研究方法和研究周期见仁见智，有些研究者通过回顾短期内的现象总结规律，有些研究者通过推演不同情况的概率预测未来，但如果尽可能地把研究周期拉长，寻找历史时空中生意、生态的要素演变，就能看到未来5年、10年甚至20年的发展趋势，判断企业在未来的环境中会以怎样的表达方式，实现爆发式的增长。
 
@@ -113,19 +89,13 @@ toc: true
 
 许多公司都在持续不断地创造价值，但并非所有被创造出的价值都已经被投资人发现并认可。独立研究能够重构一个条理分明的世界，让投资人在清晰的经度（比如产业上下游）和纬度（比如不同产业的交叉融合）中获得不一样的视角，比如，投资人通过与餐饮零售企业的交流，与生鲜电商企业的交流，与外卖送餐企业的交流，可以形成对食材溯源、供应链管理、门店运营等全产业链的认知，在此基础上，就能够看到行业真正的痛点。饶有意思的是，我们的分析员在内部讨论时，总能提出别人没有想过、没有研究过的新观点，正是这样的新观点为我们提供了验证或者发现机会的视角。**独立研究的最大价值是让投资人敢于面对质疑，坚信自己的判断，敢于投重注、下重仓。**这种研究精神和思维模式，会形成一种正向循环，让投资人的每一次投资决策都扎实有力，并不断获得新的投资机会。
 
-独立研究更加强调判断和结论不能建立在感性、个人知觉抑或概率基础上，而是要建立在理性、系统的分析和客观检验的基础上。在研究过程中，投资人需要分析拆解公司的财务报表、访谈管理层和公司员工、阅读大量的专业书籍和行业报告，但这远远不够，还要继续往深处想，找到数据背后的底层因子，并且这些因子应该是科学的、有意义的、逻辑上严格自洽的。
-
 当然，理性、客观的分析不等同于完全信任数据，要透过数据理解其背后真实的原因，不仅要看“数”，还要看“路”。投资人要对投资机会有基本的定性把握，认识到并弥补纯粹的统计数据的缺陷。价值投资非常强调对原始数据的挖掘和积累，这一点就说明不能迷信所有数据。对于数据，我有这样几个理解：第一，数据不等同于真相，真相往往比数据更加复杂，研究人员需要看到的是具象化的真相，而不是抽象的数据；第二，数据本身没有观点，研究人员不能预设观点、只喜欢那些能够支持自己观点的数据；第三，数据不一定永远有用，不同情况下，一些曾经有用的数据可能不再有用，需要找到新的指标。很多人迷恋数据是因为数据可以作为挡箭牌，抵挡因为懒惰而带来的错误，从而把责任怪罪到数据上。正确的理解是，**精确的数据无法代替大方向上的判断，战术上的勤奋不能弥补战略上的懒惰。**
-
-因此，投资人不应以找到数据呈现的规律作为终点，而是要把数据反映的规律作为研究分析的起点，拷问自己对数据背后真相的理解，始终享受在对细节的抽丝剥茧中发现真理的乐趣。
 
 尽管研究难易程度、所花时间与投资收益并不明显成正比，但坚持研究驱动的理由在于，要努力找到研究方法，研究最经典的少数公司，通过触类旁通实现尽可能多的所得，同时要保持研究的强度，使研究成为肌肉记忆。对研究过程的态度应是带着一种“朝圣感”，潜心学习商业史，学习一家企业是如何崛起或陨落的，理解成功的要素或失败的前提。即使没有当即对投资展现出作用，看似是“无用功”，这样的研究所带来的成果也一定会在不经意间兑现。坚持投资研究的本质就是无限接近真理。
 
 ## 理解时间的价值
 
 对于投资人而言，研究驱动是决定投资成败的基本功，而如何理解时间的价值往往是决定投资格局的关键。每个人对时间都有不同的理解，科学家、历史学家、艺术家的时间概念或许和投资人的不同，从更加深层的意义来说，植物、山河、星辰的时间概念和人类的也不同。对于一株古树来说，它所理解的时间概念源于太阳、泥土、雨露，是几十年、上百年的作用和影响；而人类看到的时间是一日一夜、一月一年。人们习惯用自己的寿命去理解时间的长度，但对于商业投资而言，一定要找到符合生意属性和价值创造的时间概念。
-
-高瓴在价值投资的旅途中，不断寻找自己的能力边界，无论是做投资，还是与企业家打交道，我们发现正确理解时间的价值愈发重要，价值投资的一招一式都在于如何理解时间。2010年在做投资复盘时，我们提出了“做时间的朋友”这一原则，希望以“时间是我们的朋友，而不是我们的敌人”作为投资分析的基础性思维和重要的决策标准。投资之前，是否把时间蕴含的历史信息和新增信息都研究透了？这笔投资能否随着时间的推演而变得更加珍贵？投资决策能否经得起时间的检验？企业的商业模式能否随着时间的延伸而不断积累新的核心竞争力？时间是否花在了长期积累价值的事情上？理解时间的价值，对于我们来说，就是解构长期主义；对于我们所投资的创业家、企业家来说，就是在时间的变化中持续不断地疯狂创造价值。
 
 ![00009](00009.jpeg)
 
@@ -175,13 +145,11 @@ toc: true
 
 ### 没有静态的护城河
 
-随着互联网技术对传统行业的改变，从获取信息、引发消费诉求，到形成购买决策和完成交易，当下和过去完全不同。特别是随着电商的兴起和消费者的代际变迁，许多新变化、新玩法出现了。一方面，随着产业链的不断完善，品牌的产生越来越快，试错和创新成本越来越低，越来越多的新奇品牌相继产生；另一方面，消费者从未像现在这样拥有如此多的选择，消费者不再统一认同大众化的品牌，而是通过看点评或是社群推荐、KOL或KOC[(18)](javascript:void(0))试用，选择真正符合自己“调性”或需求的产品，有些甚至完全是为了标新立异。消费者的搜索过程不再需要花费大量的时间成本，反而充满了乐趣。同时，由于互联网对品牌的冲击，有人说在网上通过意见领袖创造价值效率更高，有人说对终端渠道特别是对稀缺渠道的把握变得更加重要，还有人说没有哪个品牌能真正拥有消费者，这些品牌不过是为下一个品牌暂时保管消费者的热情而已……诸如此类的变化还有很多。所以，品牌无法成为永远的护城河，甚至有一些老的品牌会成为掣肘和包袱。
+随着互联网技术对传统行业的改变，从获取信息、引发消费诉求，到形成购买决策和完成交易，当下和过去完全不同。特别是随着电商的兴起和消费者的代际变迁，许多新变化、新玩法出现了。一方面，随着产业链的不断完善，品牌的产生越来越快，试错和创新成本越来越低，越来越多的新奇品牌相继产生；另一方面，消费者从未像现在这样拥有如此多的选择，消费者不再统一认同大众化的品牌，而是通过看点评或是社群推荐、KOL或KOC试用，选择真正符合自己“调性”或需求的产品，有些甚至完全是为了标新立异。消费者的搜索过程不再需要花费大量的时间成本，反而充满了乐趣。同时，由于互联网对品牌的冲击，有人说在网上通过意见领袖创造价值效率更高，有人说对终端渠道特别是对稀缺渠道的把握变得更加重要，还有人说没有哪个品牌能真正拥有消费者，这些品牌不过是为下一个品牌暂时保管消费者的热情而已……诸如此类的变化还有很多。所以，品牌无法成为永远的护城河，甚至有一些老的品牌会成为掣肘和包袱。
 
-哈佛大学管理学教授克莱顿·克里斯坦森（Clayton Christensen）在其“创新三部曲”[(19)](javascript:void(0))中对创新做出了新的系统性诠释。与许多人认为的不同，他所强调的创新，其关键不在于技术进步，更不在于科学发现，而在于对市场变迁的主动响应。创新者的窘境在于管理者犯了南辕北辙或者故步自封的错误，市场的变化导致其原有的护城河失去价值。
+在创新层出不穷的时代，人们需要重新审视传统的护城河是否还能发挥作用。在传统视角下，护城河的来源包括无形资产（品牌、专利或特许经营资质）、成本优势、转换成本、网络效应和有效规模，所有这些要素都在帮助企业获得垄断地位，从而获得经济利润。因为垄断意味着企业掌握了定价权，这样企业就可以在一段时间内非常优越地面对竞争。人们总是习惯性地认为竞争越少越好，但是，<u>一旦没有了竞争对手，企业的竞争力往往也会随之消失。</u>补贴或者垄断产生不了伟大的企业，只有在竞争中才能产生伟大的企业。把企业做大是可能的，把企业做成永恒是几乎不可能的，任何企业都有灭亡的一天。尤其是企业一旦具备垄断地位，从基因角度看，它是否还能拥有足够的动力去不断创新？这是企业面临的巨大挑战。更何况，在现在的时代，究竟有没有真正意义上的垄断，也是必须思考的问题。
 
-在创新层出不穷的时代，人们需要重新审视传统的护城河是否还能发挥作用。在传统视角下，护城河的来源包括无形资产（品牌、专利或特许经营资质）、成本优势、转换成本、网络效应和有效规模，所有这些要素都在帮助企业获得垄断地位，从而获得经济利润。因为垄断意味着企业掌握了定价权，这样企业就可以在一段时间内非常优越地面对竞争。人们总是习惯性地认为竞争越少越好，但是，一旦没有了竞争对手，企业的竞争力往往也会随之消失。补贴或者垄断产生不了伟大的企业，只有在竞争中才能产生伟大的企业。把企业做大是可能的，把企业做成永恒是几乎不可能的，任何企业都有灭亡的一天。尤其是企业一旦具备垄断地位，从基因角度看，它是否还能拥有足够的动力去不断创新？这是企业面临的巨大挑战。更何况，在现在的时代，究竟有没有真正意义上的垄断，也是必须思考的问题。
-
-我所理解的护城河，实际上是动态的、变化的，不能局限于所谓的专利、商标、品牌、特许经营资质，也不是仅仅依靠成本优势、转换成本或者网络效应。我们清楚地意识到，传统的护城河是有生命周期的。所有的品牌、渠道、技术规模、知识产权等，都不足以成为真正的护城河。**世界上只有一条护城河，就是企业家们不断创新，不断地疯狂地创造长期价值。**受到巴菲特护城河理论的启发，我们从长期的、动态的、开放的视角去进一步理解护城河，这其中最重要的，就是以用户和消费者为中心。坚持了这个中心，理解变化的消费者和市场需求，用最高效的方式和最低的成本持续创新和创造价值的能力才是真正的护城河。如果不能够长期高效地创造价值，这条护城河实际上就非常脆弱。
+我所理解的护城河，实际上是动态的、变化的，不能局限于所谓的专利、商标、品牌、特许经营资质，也不是仅仅依靠成本优势、转换成本或者网络效应。我们清楚地意识到，传统的护城河是有生命周期的。所有的品牌、渠道、技术规模、知识产权等，都不足以成为真正的护城河。**世界上只有一条护城河，就是企业家们不断创新，不断地疯狂地创造长期价值。** 受到巴菲特护城河理论的启发，我们从长期的、动态的、开放的视角去进一步理解护城河，这其中最重要的，就是以用户和消费者为中心。坚持了这个中心，理解变化的消费者和市场需求，用最高效的方式和最低的成本持续创新和创造价值的能力才是真正的护城河。如果不能够长期高效地创造价值，这条护城河实际上就非常脆弱。
 
 ### 打造动态与开放生态的护城河
 
@@ -211,7 +179,7 @@ toc: true
 
 ## 投资的生态模型
 
-在价值投资的研究中，如何捕捉到更深层次、更有把握的决定性因素，是投资人最为关注的问题。可是，在商业系统中，没有一种放之四海而皆准的成功范式，不同的企业凭借独门招式赢得生存及发展空间，有的靠品牌，有的靠产品，有的靠管理，有的甚至靠时运。但无论凭借什么，让生意和所处的环境相匹配，往往是优秀企业的重要特征。因此，我们运用第一性原理，借鉴生态学的思维模型，展开对生意的独特性、适应性和进化性的动态解析，希望在更大的系统中，探索生意的属性及其未来的变化。
+在价值投资的研究中，如何捕捉到更深层次、更有把握的决定性因素，是投资人最为关注的问题。可是，在<u>商业系统中，没有一种放之四海而皆准的成功范式，不同的企业凭借独门招式赢得生存及发展空间，有的靠品牌，有的靠产品，有的靠管理，有的甚至靠时运。</u>但无论凭借什么，让生意和所处的环境相匹配，往往是优秀企业的重要特征。因此，我们运用第一性原理，借鉴生态学的思维模型，展开对生意的独特性、适应性和进化性的动态解析，希望在更大的系统中，探索生意的属性及其未来的变化。
 
 ### 人、生意、环境和组织
 
@@ -219,7 +187,7 @@ toc: true
 
 看人，就是看拥有伟大格局观的创业者，看他的内心操守和价值追求，看他对商业模式本质的理解与投资人是否一致。人是一切价值的创造者，是企业家精神的源泉和实现载体。在实践中，中国不乏世界级的创业者，他们能够在瞬息万变中洞察趋势、了解人性。他们理解、适应并推动现实，选择创业的时点、方向，集合运转生意的组成要素，设计驱动生意的组织模式，提升运营效率，甚至改变生意的属性。评价创业者的维度有很多，既包括他能达到的高度，即能力；也包括维持能力的稳定性，即可靠性；更重要的是为社会创造价值的初心，即有没有做有意义的事。**对于投资人来说，看人就是在做最大的风控，这比财务上的风控更加重要，只要把人选对了，风险自然就小了。**我的风控理念比较关注企业家的为人，能够聚人，可以财散人聚，注重企业文化和理念，懂得自己的边界，不断学习，并且目光长远、想做大事，拥有这样的伟大格局观的企业家更容易与我们契合。实践证明，很多一流的人才做三流的生意，有可能把三流做成一流；相反，三流的人才做一流的生意，则可能把一手好牌打得稀烂。
 
-看生意，就是看这个生意的本质属性，看它解决了客户的哪些本质需求，看生意的商业模式、核心竞争力、市场壁垒以及拓展性，看它有没有动态的护城河。不同的行业和商业模式拥有不同的先天属性，但好的经济活动、商业模式往往是时间的朋友。所谓商业模式，包含客户价值主张、盈利模式、资源和流程。更关键的，是理解这个生意的演变可能：它从哪里来，会到哪里去，哪些前提决定了生死，哪些转折影响了成败。比如，可口可乐公司曾经有一句名言：“假如我的工厂被大火毁灭，假如遭遇世界金融风暴，但只要有可口可乐的品牌，第二天我又将重新站起。”可口可乐靠标准化的供给满足了多样化的情感需求，因为它的生意本质是建立一种长期稳定的心理认知。判断一个生意是不是时间的朋友，可以看它在整个市场不好的时候，能不能变得更强大；看它的规模优势能不能根本性地改变成本和运营结构；看技术创新对行业是颠覆性的还是完善性的；诸如此类。对于投资人来说，持续追问生意的本质尤为关键，要看在发生集中度提升、技术突破、价值链重构等产业变革后，这个商业模式能否产生可持续、可积累的系统能力，看经过时间的沉淀以后，这个生意能否产生复利的价值。
+<u>看生意，就是看这个生意的本质属性，看它解决了客户的哪些本质需求，看生意的商业模式、核心竞争力、市场壁垒以及拓展性，看它有没有动态的护城河</u>。不同的行业和商业模式拥有不同的先天属性，但好的经济活动、商业模式往往是时间的朋友。所谓商业模式，包含客户价值主张、盈利模式、资源和流程。更关键的，是理解这个生意的演变可能：它从哪里来，会到哪里去，哪些前提决定了生死，哪些转折影响了成败。比如，<u>可口可乐公司曾经有一句名言：“假如我的工厂被大火毁灭，假如遭遇世界金融风暴，但只要有可口可乐的品牌，第二天我又将重新站起。”</u> 可口可乐靠标准化的供给满足了多样化的情感需求，因为它的生意本质是建立一种长期稳定的心理认知。判断一个生意是不是时间的朋友，可以看它在整个市场不好的时候，能不能变得更强大；看它的规模优势能不能根本性地改变成本和运营结构；看技术创新对行业是颠覆性的还是完善性的；诸如此类。对于投资人来说，持续追问生意的本质尤为关键，要看在发生集中度提升、技术突破、价值链重构等产业变革后，这个商业模式能否产生可持续、可积累的系统能力，看经过时间的沉淀以后，这个生意能否产生复利的价值。
 
 ![00010](00010.jpeg)
 
@@ -239,7 +207,7 @@ toc: true
 
 我想分享我们对Zoom公司的投资案例，以作为理解人、生意、环境和组织这个分析框架的切入点。2014年在美国加州，我和Zoom的创始人袁征结识，他热情地向我介绍了Zoom的发展情况，并和我分享了他稍早前在另外一家视频会议公司WebEx工作时的心得。当时我最直接的感受就是，当人和事完全匹配时，公司将被激发出前所未有的力量。袁征对视频会议这门生意的理解，以及他多年的技术积淀，都使他正在做的这项事业拥有很高的成功概率。他的激情和追求将会不断地相互转化。同时，对于云视频这个行业，我们也有多年研究，归根到底，Zoom创造了又一个“用科技提高效率”的典型场景。因此，只要商业生态的环境变了，无论是需求端还是供给端变了，Zoom都将迎来巨大的结构性机会。环境的改变可能源于选择线上工作方式的科技公司越来越多，跨时区、跨地域的商务沟通越来越频繁，组织生产形态越来越灵活，或者其他外生因素。我们无法预测环境的改变时点，但“用科技提高效率”这个长期趋势一定是不可逆的，是一个“质变引起量变”的过程。
 
-再来看组织，袁征在公司创立的早期就建立了非常符合其产品逻辑和生意属性的组织文化。他把“传递快乐”作为Zoom的组织文化。他不仅推崇符合产品逻辑的极客精神[(21)](javascript:void(0))，也非常推崇符合市场逻辑的用户导向文化，并且还提出了“产品导向和用户导向要交替进行”的管理理念。这对于一家硅谷公司而言是非常具有创新性的。他致力于打造让用户开心的产品，并成功把对生意的理解贯穿于组织的管理之中，让技术和产品、用户和体验有了非常好的结合，让每一位员工都有很强的工作热情，形成不断学习、不断追问问题本质、不断满足用户需求的自驱力，让企业上下都能围绕共同的产品逻辑和市场逻辑来做事情。因此，在2015年，我们就很坚定地相信，Zoom在未来一定能在云视频领域有所成就，于是我们在很早期的轮次就投资了这家公司。
+再来看组织，袁征在公司创立的早期就建立了非常符合其产品逻辑和生意属性的组织文化。他把“传递快乐”作为Zoom的组织文化。他不仅推崇符合产品逻辑的极客精神，也非常推崇符合市场逻辑的用户导向文化，并且还提出了“产品导向和用户导向要交替进行”的管理理念。这对于一家硅谷公司而言是非常具有创新性的。他致力于打造让用户开心的产品，并成功把对生意的理解贯穿于组织的管理之中，让技术和产品、用户和体验有了非常好的结合，让每一位员工都有很强的工作热情，形成不断学习、不断追问问题本质、不断满足用户需求的自驱力，让企业上下都能围绕共同的产品逻辑和市场逻辑来做事情。因此，在2015年，我们就很坚定地相信，Zoom在未来一定能在云视频领域有所成就，于是我们在很早期的轮次就投资了这家公司。
 
 此后，我们还专门邀请袁征为许多初创企业做分享，请他从自己的角度讲述如何理解人、生意、环境和组织，讲述让他在企业初创阶段做出正确决策的思维方法。我们希望不仅在人、生意、环境和组织这个框架里做投资，还通过这个框架，把成功的创业秘籍、思维方法分享给更多的人，让更多的创业者跳出来，在更广阔、更长期的格局里思考问题，这为我们做投资，并与企业家一起创造价值创造了非常重要的正向循环。
 
@@ -259,19 +227,17 @@ toc: true
 
 早期的价值投资更依赖于对企业资产负债表的分析，算市净率（P/B），即把企业资产价值算清楚后，用低于清算价值的价格买入资产，赚被市场低估的那部分钱。这种投资策略是在经历了股灾与大萧条之后的沉痛反思中产生的，受到当时特有市场环境的影响，是在悲观中孕育着希望。正是由于20世纪30年代早期的经济危机和当时混乱无序的市场结构，许多股票的价格常常低于账面价值，人们通过关注财务报表，计算企业的静态价值、账面价值，不考察，不调研，不找管理层谈话，就可以发现许多好的投资标的，这是基本面研究最幸福的时代，不过，也是价值投资不被世人所重视的时代。
 
-沃伦·巴菲特早期深受本杰明·格雷厄姆的影响，在投资实践中，关注企业的运营业绩及净利润、净资产规模、资本回报率等财务指标，寻找资产价值能够算清楚的公司。此时的价值投资强调价格和价值的脱离，提倡所谓的“捡烟蒂”，就是投资价格比较便宜、资产拆分下来有很大折价的公司，类似于把一辆汽车买回来，拆了卖零件还能赚钱。
+沃伦·巴菲特早期深受本杰明·格雷厄姆的影响，在投资实践中，关注企业的运营业绩及净利润、净资产规模、资本回报率等财务指标，寻找资产价值能够算清楚的公司。此时的价值投资强调价格和价值的脱离，提倡所谓的“捡烟蒂”，就是投资价格比较便宜、资产拆分下来有很大折价的公司，<u>类似于把一辆汽车买回来，拆了卖零件还能赚钱。</u>
 
 到20世纪六七十年代以后，便宜的公司已经很少了。1976年，本杰明·格雷厄姆在接受《金融分析师杂志》（*Financial Analysts Journal*）采访时也指出：“价值投资的适用范围越来越小。”查理·芒格告诉沃伦·巴菲特，显而易见的便宜公司已经消失了，一旦突破了格雷厄姆式的便宜标准，就可以考虑更多更优质的企业。而且，随着资金管理规模的扩大，仅寻找便宜公司的投资策略显然不再好用。
 
-因此，这个时期的沃伦·巴菲特逐步受到菲利普·费雪（Philip Fisher）[(22)](javascript:void(0))和查理·芒格的影响，从一个“捡烟蒂”式价值投资者转变为寻找护城河的价值投资者。在收购喜诗糖果这家优秀的成长型企业以后，沃伦·巴菲特开始聚焦于研究公司质地，追求购买市场地位中隐含成长惯性的公司，尤其喜欢购买具有垄断性质的公司，寻找公司的护城河，如无形资产价值等，在此基础上，关注管理层的能力以及企业文化，在自己熟悉的领域内发现优秀企业并长期持有。这个时候，价值投资被重新定义，即购买好的、有成长性的企业。有一句流行的话，叫“有的人因为相信而看见，有的人要看见才相信”。眼光和判断，意味着价值投资的“安全边际”不仅是面向过去的，还是面向未来的。
+因此，这个时期的沃伦·巴菲特逐步受到菲利普·费雪和查理·芒格的影响，从一个“捡烟蒂”式价值投资者转变为寻找护城河的价值投资者。在收购喜诗糖果这家优秀的成长型企业以后，沃伦·巴菲特开始聚焦于研究公司质地，追求购买市场地位中隐含成长惯性的公司，尤其喜欢购买具有垄断性质的公司，寻找公司的护城河，如无形资产价值等，在此基础上，关注管理层的能力以及企业文化，在自己熟悉的领域内发现优秀企业并长期持有。这个时候，价值投资被重新定义，即购买好的、有成长性的企业。有一句流行的话，叫<u>“有的人因为相信而看见，有的人要看见才相信”。眼光和判断，意味着价值投资的“安全边际”不仅是面向过去的，还是面向未来的。</u>
 
-至此，价值投资的理念已经从早期关注市净率发展到关注企业真正的“内在价值”阶段，从“寻找市场低估”发展到“合理估值、稳定成长”，可以说是价值投资理念的完善和丰富。这种投资理念的进化也是与美国20世纪80年代的发展相匹配的。那个年代，美国的人口和经济总量持续稳定增长，许多公司在国内市场自然扩大和全球化的过程中不断发展壮大，获得了高成长。从更宽泛的意义来说，价值投资对于美国工业社会、商业社会的形成，一定程度上起着动力源和稳定器的作用。时代的商业文明不仅仅塑造了实体产业，同时也塑造了现代投资业，这种相互交织的能量场、连接资本和产业的力量共同助力创新和发展。所以，可以说格雷厄姆与多德是价值投资理念的开山鼻祖，而巴菲特则是集大成者。
+至此，价值投资的理念已经从早期关注市净率发展到关注企业真正的“<u>内在价值”阶段，从“寻找市场低估”发展到“合理估值、稳定成长”，</u>可以说是价值投资理念的完善和丰富。这种投资理念的进化也是与美国20世纪80年代的发展相匹配的。那个年代，美国的人口和经济总量持续稳定增长，许多公司在国内市场自然扩大和全球化的过程中不断发展壮大，获得了高成长。从更宽泛的意义来说，价值投资对于美国工业社会、商业社会的形成，一定程度上起着动力源和稳定器的作用。时代的商业文明不仅仅塑造了实体产业，同时也塑造了现代投资业，这种相互交织的能量场、连接资本和产业的力量共同助力创新和发展。所以，可以说格雷厄姆与多德是价值投资理念的开山鼻祖，而巴菲特则是集大成者。
 
 ### 坚持长期结构性价值投资，持续创造价值
 
-到了今天来看，传统的价值投资永远有其长远的意义，但世界在不断地变化，无论是格雷厄姆式还是巴菲特式的价值投资者，都面临着一些困境，价值投资需要结合时代背景来不断地创新和发展。
-
-经典的价值投资产生于20世纪30年代，20世纪五六十年代就已经被广泛使用，市场和产业的变化，尤其是科技的快速发展，使得投资人在研究企业时无法停留在实物资产价值、账面价值或静态的内在价值这一层面。“市场先生”“内在价值”“安全边际”这些经典概念有了更多新的含义：更加成熟的市场效率、企业自身的内生动能以及不断变化的外界环境，构成了理解价值投资的新角度。价值投资的内涵和外延都在变化。**如果说价值投资的出发点是发现价值的话，其落脚点应该是创造价值。**
+更加成熟的市场效率、企业自身的内生动能以及不断变化的外界环境，构成了理解价值投资的新角度。价值投资的内涵和外延都在变化。**如果说价值投资的出发点是发现价值的话，其落脚点应该是创造价值。**
 
 ![img](00011.jpeg)
 
@@ -285,13 +251,11 @@ toc: true
 
 举例来说，一家公司的价值成长曲线可能是每股股价从100元到120元，再到150元。发现价值就是在股价为50元的时候，就去发现它、购买它。但更好的做法可能是在某个阶段切入，然后与创业者一起，改变它的生长空间和增长曲线，让它的价值能够从新的角度来衡量，从100元增长到200元、500元……通过这种参与和陪伴，我们不仅能分享价值增长的复合收益，还能够真正做创业者的合伙人、后援团，帮助企业不断生长。
 
-这就是我们坚持的长期结构性价值投资。**所谓长期结构性价值投资，是相对于周期性思维和机会主义而言的，核心是反套利、反投机、反零和游戏、反博弈思维。**研究和决策的前提是对长期动态的跟踪和观察，判断一家企业是否是“时间的朋友”，来实现跨周期投资。基于对公司基本面的深度研究而非市场短期波动来做投资决策，保持足够谨慎的风险意识和理性预期，就是反套利、反投机；关注并参与结构性的市场与行业变革机会，打造动态护城河，摒弃不可持续的垄断地位或套利空间，就是反零和游戏和反博弈思维。**长期结构性价值投资的核心是格局观，不断颠覆自身，重塑产业，为社会持续创造价值。**
+这就是我们坚持的长期结构性价值投资。**<u>所谓长期结构性价值投资，是相对于周期性思维和机会主义而言的，核心是反套利、反投机、反零和游戏、反博弈思维</u>。**研究和决策的前提是对长期动态的跟踪和观察，判断一家企业是否是“时间的朋友”，来实现跨周期投资。基于对公司基本面的深度研究而非市场短期波动来做投资决策，保持足够谨慎的风险意识和理性预期，就是反套利、反投机；关注并参与结构性的市场与行业变革机会，打造动态护城河，摒弃不可持续的垄断地位或套利空间，就是反零和游戏和反博弈思维。**长期结构性价值投资的核心是格局观，不断颠覆自身，重塑产业，为社会持续创造价值。**
 
 长期结构性价值投资专注于价值创造，因此对于企业而言应该像孵化器，是效率提升的孵化器，更是思维策略的孵化器。就像经济学家总结归纳复杂的社会现象、军事家熟读上古的战术兵法、政治家翻阅传承先哲的治国方略、运动员观摩学习冠军的比赛录像一样，价值投资者可以在研究的基础上，把从商业研究中抽离出的规律，分享给创业者、企业家。创造价值的核心是提供全面系统的解决方案，包括企业战略分析、嫁接优质资源、复制管理经验、提升运营效率、拓展国际业务、在海外复制中国模式，甚至通过提供争论性的话题来打开思维等。同时，创造价值的方式要与企业所处的阶段、特有的基因、未来的愿景紧密结合，在更高的维度和更远的视野中，提供相适应的解决方案。
 
-比如，我们真正成了提供解决方案的资本，覆盖全产业链、全生命周期。不论企业处于创立早期、快速成长期，还是成熟期，我们只希望在企业拥抱创新和变化的时候加入并全程陪伴，在此过程中不仅发现价值，而且创造价值，为企业提供符合其当前发展阶段和长期趋势的全方位支持。2020年春天，当一场突如其来的疫情让无数创业者陷入担忧和迷茫时，我们专门推出了“高瓴创投”这一品牌，全面覆盖生物医药、医疗器械、软件服务、原发科技创新、消费互联网、新兴消费品牌等最具活力的行业，就是希望加速聚集资本、资源、人才等多维助力，帮助创业者重振士气，走出焦虑，在产业发展和社会变革的长期趋势中乘风破浪，把握创新、创业的巨大机会。
-
-再比如，我们有许多控股型投资的尝试，搭建产业投资与运营平台，这个决策的出发点不是为了赚钱，这种方式也未必是最赚钱的方式，可能还是无用功，但这种投资方式能够让投资人从实践和变革中理解产业的深层次逻辑和许多现实问题，避免投资人出现眼高手低和纸上谈兵的问题，这是最大的“有用”。而且，我们还有许多资源连接和战略协同的尝试，在“走出去”和“引进来”的过程中充当连接器和催化剂，把全球的创新引进中国，把中国的创新复制到全世界。在与创业者、企业家同行的过程中，向科技赋能要效率、要产出，向国际化、全球化要经验、要创新。
+比如，我们真正成了提供解决方案的资本，覆盖全产业链、全生命周期。不论企业处于创立早期、快速成长期，还是成熟期，我们只希望在企业拥抱创新和变化的时候加入并全程陪伴，在此过程中不仅发现价值，而且创造价值，为企业提供符合其当前发展阶段和长期趋势的全方位支持。
 
 ## 坚守三个投资哲学
 
@@ -323,7 +287,7 @@ toc: true
 
 ### 桃李不言，下自成蹊
 
-“桃李不言，下自成蹊”，出自《史记》，原意是桃树和李树不主动招引人，但人们都来赏花摘果，在树下走出了一条小路。对于投资人来说，不要在意短期创造的社会声誉或者价值，而应在意的是长期创造了多少价值。沉醉于一时的成功、放任高调的宣传通常是非常危险的。自我膨胀很容易让人迷了心智，听不进反对意见，把不准未来方向；名声大了很容易引来不必要的关注，毁也好，誉也好，总归是让人分心的评判。杂音多了，内心的声音就容易被忽略。如果在初期就非常高调，就很容易失去理智。西方人经常说，“上帝欲使其灭亡，必先使其疯狂”，印证这句话的创业故事不胜枚举。
+“桃李不言，下自成蹊”，出自《史记》，<u>原意是桃树和李树不主动招引人，但人们都来赏花摘果，在树下走出了一条小路。对于投资人来说，不要在意短期创造的社会声誉或者价值，而应在意的是长期创造了多少价值。</u>沉醉于一时的成功、放任高调的宣传通常是非常危险的。自我膨胀很容易让人迷了心智，听不进反对意见，把不准未来方向；名声大了很容易引来不必要的关注，毁也好，誉也好，总归是让人分心的评判。杂音多了，内心的声音就容易被忽略。如果在初期就非常高调，就很容易失去理智。西方人经常说，“上帝欲使其灭亡，必先使其疯狂”，印证这句话的创业故事不胜枚举。
 
 首先，要回归投资的初心。对于投资人来说，关键是做好自己的本职工作，找到并支持优秀的创业者实现创业梦想，同时在这个过程中为社会创造更大的价值。坚持做正确的事情，在行业里就会形成好的口碑，有共同理念的人终究会与我们合作。我们坚持要“找靠谱的人一起做有意思的事”，在投资的过程中就会充满与相知相识的人共同征服挑战的愉悦感和成就感，这样就能实现“不言”或者“少言”。
 
