--- a/content/docs/1价值/3_价值投资启蒙.md
+++ b/content/docs/1价值/3_价值投资启蒙.md
@@ -43,7 +43,7 @@ See also the docs: <a href="https://wiki.mbalib.com/wiki/金融市场" target="_
 
 ## 我对投资的思考
 
-- 对于“风险”这个在金融学中被谈到令人麻木的概念，大多数人的评估标准是看投资收益的波动方差，而我从入行第一天起就被要求看出数字背后的本质并忽略那些从“后视镜”中观测到的标准方差：到底是什么样的自上而下**/**自下而上的基本面在驱动收益的产生及波动？又有哪些因素会使预期的资本收益发生偏差？而这些基本面因素在本质上有哪些相关性及联动性？
+- 对于“风险”这个在金融学中被谈到令人麻木的概念，大多数人的评估标准是看投资收益的波动方差，而我从入行第一天起就被要求看出数字背后的本质并忽略那些从“后视镜”中观测到的标准方差。
 
 - 尽管投资人没有要求归还投资款，我们仍然坚持“这些钱一定要还”。我们希望用这样的方式来感谢他们的信任和支持。一个人的职业生涯很长，不能做任何对帮助过你的人有损害的事情，否则那可能会困扰你的一生。
 
