--- a/content/docs/2投资哲学/5_价值投资者的自我修养.md
+++ b/content/docs/2投资哲学/5_价值投资者的自我修养.md
@@ -19,12 +19,6 @@ toc: true
 
 所以说，价值投资是一场不折不扣的修行，这条路有时熙熙攘攘，有时冷冷清清，但一直在这条路上行走的人，实在不多。能有更多的价值投资者同行，共同讨论和切磋，无论对于投资行业还是对于具体的投资人而言，都是一件好事。
 
-2017年，我和邱国鹭、邓晓峰、卓利伟等几位好友共同发起成立了高礼价值投资研究院，创办初衷就是希望在中国价值投资发展的过程中，能有一个供投资人相互学习、探讨的实战训练营，希望从一个很小的社群里，走出更多真正懂得价值投资的优秀投资人，进而把好的资源与优秀的企业家结合起来，为中国资本市场和实体经济发展贡献一份力量。
-
-很早的时候，我们就开始筹划这个研究院，为了更好地办学，我们多次讨论并出国考察。2015年5月，我们一行中国价值投资者参加了巴菲特年会，与沃伦·巴菲特、查理·芒格、大卫·史文森、约翰·保尔森等美国投资人交流，发现美国投资人无论是做价值投资还是采用其他投资方法，都能够在社群中深入探讨非常长远以及具有很大格局的重要问题，他们身上所展现的思辨性、开放性让人动容。自那时起，我们成立高礼价值投资研究院的想法就更加明确了。
-
-在高礼价值投资研究院，学员们可以开诚布公地交流，不仅仅对行业格局和重点公司进行研究剖析，还可以对规律性的认知进行切磋探讨，在不断学习和实践中理解价值投资。我们希望，基于这种学习氛围，学员们能够想得深、看得远、做大事。
-
 ## 坚持第一性原理
 
 价值投资者应该坚持第一性原理，从本质上理解投资，理解价值投资。
@@ -33,11 +27,9 @@ toc: true
 
 ### 投资系统的第一性原理
 
-那投资系统的第一性原理是什么？在探讨投资系统的第一性原理之前，需要首先认识到投资系统是理性的、有逻辑体系的，否则不会存在第一性原理。沃伦·巴菲特在《聪明的投资者》（*The Intelligent Investor*）[(25)](javascript:void(0))的序言中写道：“要想在一生中获得投资成功，并不需要顶级的智商、超凡的商业头脑或内幕消息，而是需要一个稳妥的知识体系作为决策基础，并且有能力控制自己的情绪，使其不会对这种体系造成侵蚀。”所以，与其把投资纳入艺术的范畴，不如把它纳入讲道理、讲逻辑的理性范畴，尤其是价值投资，是一件可学习、可传承、可沉淀的事情，一旦总结出投资原则和系统化的知识方法，就可以讲给出资人听，讲给创业者听，讲给大家听。**价值投资不必依靠天才，只需依靠正确的思维模式，并控制自己的情绪。**
+“要想在一生中获得投资成功，并不需要顶级的智商、超凡的商业头脑或内幕消息，而是需要一个稳妥的知识体系作为决策基础，并且有能力控制自己的情绪，使其不会对这种体系造成侵蚀。” 所以，与其把投资纳入艺术的范畴，不如把它纳入讲道理、讲逻辑的理性范畴，尤其是价值投资，是一件可学习、可传承、可沉淀的事情，一旦总结出投资原则和系统化的知识方法，就可以讲给出资人听，讲给创业者听，讲给大家听。**价值投资不必依靠天才，只需依靠正确的思维模式，并控制自己的情绪。**
 
-理解投资系统的第一性原理需要解构和溯源投资过程中的底层要素，即资本、资源、企业及其创造的价值；需要思考清楚投资的前提和出发点，即为什么投资，投资是为了什么。在我看来，投资系统的第一性原理不是投资策略、方法或者理论，而是在变化的环境中，识别生意的本质属性，把好的资本、好的资源配置给最有能力的企业，帮助社会创造长期的价值。资本市场必须脱虚入实，将资本聚焦于最有能力、最需要帮助的企业。具体到价值投资层面，其出发点就是基于对基本面的理解，寻找价值被低估的公司并长期持有，从企业持续创造的价值中获得投资回报。
-
-在创办高瓴之前，我没有做过专门的权益投资，但非常庆幸之后能够运用第一性原理，来构建自己的投资理念和方法。第一性原理的最大价值在于两点，其一是能够看清楚事物的本质，其二是能够在理解本质的基础上自由地创新。对于投资人而言，就是在回归投资的基本定义的基础上，理解商业的底层逻辑。
+理解投资系统的第一性原理需要解构和溯源投资过程中的底层要素，即资本、资源、企业及其创造的价值；需要思考清楚投资的前提和出发点，即为什么投资，投资是为了什么。投资系统的第一性原理不是投资策略、方法或者理论，而是在变化的环境中，识别生意的本质属性，把好的资本、好的资源配置给最有能力的企业，帮助社会创造长期的价值。资本市场必须脱虚入实，将资本聚焦于最有能力、最需要帮助的企业。具体到价值投资层面，其出发点就是基于对基本面的理解，寻找价值被低估的公司并长期持有，从企业持续创造的价值中获得投资回报。
 
 ### 回归投资的基本定义
 
